@@ -1,0 +1,2 @@
+<%= f.label field.attribute %>
+<%= f.check_box field.attribute %>
